--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,10 +1,26 @@
+#vis {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 10pt;
+    position: relative;
+    left: 30vw;
+    top: -20vh;
+    max-width: 70vw;
+    max-height: 80vh;
+  }
+
+#search-box {
+    margin-top: 20vh;
+}
+
+#search-form {
+    max-width: 50%;
+    max-height: 50%
+}
+
 body {
-    background: lightblue;
-}
-.container {
-    max-width: 500px;
-    padding-top: 20px;
-}
-input {
-    max-width: 200px;
+    max-width: 90vw;
+    max-height: 900vh;
 }
