--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,9 +34,9 @@
       <script src="https://cdn.rawgit.com/olihawkins/d3-hexjson/master/build/d3-hexjson.js"></script>
     </div>
     <!-- Iterating over database -->
-    <!-- {% for actor in actors %}
-    <div><p>{{ actor.first_name }} </b></p></div>
-    {% endfor %} -->
+    {% for value in result %}
+    <div><p>{{ value.title }} </b></p></div>
+    {% endfor %}
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
