--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>NatQuery</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href={{ url_for('static', filename='index.css') }} rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
-  </head>
-  <body>
-    <div class="container">
-        <!-- Simple Textfield -->
-      <div class="col-md-12" id="title_bar">
-        <span id="title"><strong>NatQuery</strong></span>
-      </div>
-      <div class="col-md-1"></div>
-      <div class="col-md-3">
-        <div class="mdl-textfield mdl-js-textfield" id="search-box">
-          <input class="mdl-textfield__input" type="text" id="sample1">
-          <label class="mdl-textfield__label" for="sample1">Search...</label>
+<head>
+  <title>NatQuery</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href={{ url_for('static', filename='index.css') }} rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
+</head>
+
+<body>
+  <div class="container">
+    <!-- Simple Textfield -->
+    <div class="col-md-12 page-header" id="title_bar">
+      <span id="title">
+        <h2>NatQuery</h2>
+      </span>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+      <div class="panel panel-info">
+        <div class="panel-heading">Query</div>
+        <div class="panel-body">
+          <div class="input-group btn-group" role="group">
+            <input type="text" class="form-control" id="speech_box" placeholder="Type your query...">
+            <span class="input-group-btn">
+              <button class="btn btn-default" id="voice" type="button">
+                <img src="static/voice.png" id="voice_img">
+              </button>
+              <button class="btn btn-default" id="voice" type="button">
+                <img src="static/search.png" id="search_img">
+              </button>
+            </span>
+          </div>
+
+
         </div>
       </div>
-      <div class="col-md-2">
-        <img src="static/search.png" id="search_img">
-        <img src="static/voice.png"  id="voice_img">
-      </div>
-      
-      <div class="col-md-6">
-        <div id="vis"></div>
-      </div>
-      <script src="https://d3js.org/d3.v4.min.js"></script>
-      <script src="https://cdn.rawgit.com/olihawkins/d3-hexjson/master/build/d3-hexjson.js"></script>
     </div>
-    <!-- Iterating over database -->
-    {% for value in result %}
+    <!-- <div class="col-md-1"></div> -->
+
+    <div class="col-md-6">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          Output
+        </div>
+        <div class="panel-body">
+          <div id="vis"></div>
+        </div>
+      </div>
+
+    </div>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdn.rawgit.com/olihawkins/d3-hexjson/master/build/d3-hexjson.js"></script>
+  </div>
+  <!-- Iterating over database -->
+  {% for value in result %}
     <div><p>{{ value.title }} </b></p></div>
     {% endfor %}
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src={{ url_for('static', filename='main.js') }}></script>
-  </body>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src={{ url_for('static', filename='main.js') }}></script>
+</body>
+
 </html>
