Add synonym support

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -10,11 +10,11 @@
 
 
 #search_img {
-    height: 2.5vh;
+    height: 1.2em;
 }
 
 #voice_img {
-    height: 2.5vh;
+    height: 1.2em;
 }
 
 body {
