--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,14 +1,3 @@
-#vis {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 10pt;
-    max-width: 60vw;
-    max-height: 80vh;
-}
-
-
 #search_img {
     height: 1.2em;
 }
@@ -23,4 +12,8 @@ body {
 
 #title_bar {
     text-align: center;
+}
+
+#speech_box {
+    z-index: 0;
 }
