--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,13 +38,8 @@
           </div>
         </div>
       </div>
-      
-    </div>
-    
 
-    
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://cdn.rawgit.com/olihawkins/d3-hexjson/master/build/d3-hexjson.js"></script>
+    </div>
   </div>
   <!-- Iterating over database -->
   <!-- {% for value in result %}
@@ -53,7 +48,9 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script> -->
   <script src={{ url_for('static', filename='main.js') }}></script>
+  <script src={{ url_for('static', filename='anime.min.js') }}></script>
 </body>
 
 </html>
