Added logo and UI fixes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
     <div class="col-md-12 page-header" id="title_bar">
       <!-- Title -->
       <span id="title">
-        <h2>NatQuery</h2>
+        <img src="static/NatQuery.png" id="product_img">
       </span>
     </div>
     <!-- Search bar -->
@@ -42,14 +42,14 @@
               <button class="btn btn-default" id="voice" type="button">
                 <img src="static/voice.png" id="voice_img">
               </button>
-              <button class="btn btn-default" id="search" type="button" onclick="send_query()">
+              <button class="btn btn-default" id="search" type="button" onclick="search()">
                 <img src="static/search.png" id="search_img">
               </button>
             </span>
           </div>
         </div>
       </div>
-
+      
     </div>
   </div>
   <!-- Iterating over database -->
